--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = magazine_rodrigues
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.magazineRodrigues
+PRODUCT_BUNDLE_IDENTIFIER = ufrpe.ecom.magazine_rodrigues
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
