--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.0+1
+version: 1.0.2+3
 
 environment:
   sdk: ">=3.1.0 <4.0.0"
@@ -36,7 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter_svg: ^2.0.9 # help us to use SVG in our app
   provider: ^6.1.1 # for State management
-
+  http: ^0.13.4 # for http requests
+  async: ^2.8.2 # for async functions
 dev_dependencies:
   flutter_test:
     sdk: flutter
